# pyx

./: .gitignore  README.md  pysite.bat
extension/: package.json
extension/syntaxes/: cdf.tmGrammar.json
pysite/: __init__.py  __main__.py  pyproject.toml  tags.py
pysite/pysite/: __init__.py
pyx-pysite/: pyproject.toml
pyx-pysite/pysite/: __init__.py  __main__.py  tags.py
pyx-pysite/pysite/pyx/: generator.py  pyxc.py  xmlparser.py
pyx-pysite/pyx_pysite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: generator.py  pyxc.py  xmlparser.py
test_proj/: app.py  app.pyx  index.cdf
test_proj/components/: button.py  button.pyx
test_proj/snippets/: __init__.py  __init__.pyx
