[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pysite"
authors = [{name = "Carl Furtado", email = "carlzfurtado@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent"
]

dependencies = [
    "flask >= 2.3.0"
]

dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/User0332/pyx"

[project.scripts]
pysite = "pysite.__main__:main"
